working on UI and spacing for search page - still has some bugs

--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -129,11 +129,9 @@ input[type=text] {
 }
 
 .my-link {
-	padding: 10px;
 	font-size: 18px;
 	font-weight: 300;
 	color: #fff;
-	padding: 0;
 	text-decoration: none;
 }
 
@@ -182,7 +180,7 @@ input[type=text] {
 	color: #fff;
 	line-height: 1.3;
 	padding: .6em 1.4em .5em .8em;
-	width: 75%;
+	width: 100%;
 	max-width: 100%;
 	box-sizing: border-box;
 	margin: 0;
@@ -197,6 +195,7 @@ input[type=text] {
 	outline: none;
 	box-shadow: none;
 	border: none;
+	text-align: center;
 }
 .custom-select::-ms-expand {
 	display: none;
@@ -236,3 +235,45 @@ input[type=text] {
 .now-playing-detail {
 	display: inline-block;	
 }
+
+.tooltip-inner {
+    max-width: 200px;
+    padding: 3px 8px;
+    color: #fff;
+    text-align: center;
+    background-color: #343a40;
+    border-radius: .25rem;
+}
+
+.tooltip.bs-tooltip-auto[x-placement^=top] .arrow::before, .tooltip.bs-tooltip-top .arrow::before {
+    margin-left: -3px;
+    content: "";
+    border-width: 5px 5px 0;
+    border-top-color: #343a40;
+}
+
+.tooltip.bs-tooltip-auto[x-placement^=right] .arrow::before, .tooltip.bs-tooltip-right .arrow::before {
+    margin-top: -3px;
+    content: "";
+    border-width: 5px 5px 5px 0;
+    border-right-color: #343a40;
+}
+
+.tooltip.bs-tooltip-auto[x-placement^=bottom] .arrow::before, .tooltip.bs-tooltip-bottom .arrow::before {
+    margin-left: -3px;
+    content: "";
+    border-width: 0 5px 5px;
+    border-bottom-color: #343a40;
+}
+
+.tooltip.bs-tooltip-auto[x-placement^=left] .arrow::before, .tooltip.bs-tooltip-left .arrow::before {
+    right: 0;
+    margin-top: -3px;
+    content: "";
+    border-width: 5px 0 5px 5px;
+    border-left-color: #343a40;
+}
+
+.slider.slider-horizontal{
+	width:100%; /* sample value - set it as you like*/
+  }
